--- a/javascript/effect/parallaxEffect04.html
+++ b/javascript/effect/parallaxEffect04.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="../assets/css/parallax.css" />
     <link rel="stylesheet" href="../assets/css/dracula.css" />
 
+    <link rel="stylesheet" href="../assets/css/parallax.css" />
+    <link rel="stylesheet" href="../assets/css/dracula.css" />
+
     <link
       href="https://webfontworld.github.io/NexonLv1Gothic/NexonLv1Gothic.css"
       rel="stylesheet"
@@ -34,13 +37,12 @@
         border-radius: 50px;
         transition: top 0.4s ease;
       }
-      #parallax__nav.show {
-        top: 20px;
-      }
+
       #parallax__nav li {
         display: inline;
         margin: 0 5px;
       }
+
       #parallax__nav li a {
         display: inline-block;
         height: 30px;
@@ -48,20 +50,21 @@
         text-align: center;
         line-height: 30px;
       }
+
       #parallax__nav li.active a {
         background: #fff;
         color: #000;
         border-radius: 20px;
         box-sizing: content-box;
       }
+
       #parallax__cont {
         max-width: 1600px;
-        width: 98%;
-        margin: 0 auto;
-        overflow: hidden;
-        /* 깨질경우 전체를 감싸는 부분에 overflow: hidden; 넣어줌 */
         /* background-color: rgba(255, 255, 255, 0.1); */
+        margin: 0 auto;
+        width: 98%;
       }
+
       .content__item {
         width: 1000px;
         max-width: 70vw;
@@ -72,36 +75,44 @@
         position: relative;
         padding-top: 8vw;
       }
+
       .content__item:nth-child(even) {
+        /* 2n도 가능하고 even 도 가능하고 */
         margin-left: 0;
         text-align: right;
       }
+
       .content__item__num {
+        font-size: 35vw;
         font-family: "Lato";
         font-weight: 100;
-        font-size: 35vw;
         position: absolute;
         left: -5vw;
-        top: -13vw;
+        top: -16vw;
         opacity: 0.07;
         z-index: -2;
       }
+
       .content__item:nth-child(even) .content__item__num {
-        left: auto;
         right: -5vw;
+        left: auto;
+        /* left 값 초기화 */
       }
+
       .content__item__title {
-        font-weight: 700;
+        font-weight: 400;
         text-transform: capitalize;
       }
+
       .content__item__imgWrap {
         width: 100%;
         padding-bottom: 56.25%;
-        background: #000;
+        background-color: #000;
         position: relative;
         overflow: hidden;
         z-index: -1;
       }
+
       .content__item__img {
         position: absolute;
         background-color: rgba(0, 0, 0, 1);
@@ -113,13 +124,10 @@
         left: -5%;
         top: -5%;
         filter: saturate(0%);
-        transition: all 1s;
+        /* transition: all 1s; */
         opacity: 0.7;
       }
-      .content__item__img:hover {
-        filter: saturate(100%);
-        transform: scale(1.025);
-      }
+
       .content__item:nth-child(1) .content__item__img {
         background: url(../assets/img/effect_bg31.jpg) no-repeat center / cover;
       }
@@ -162,41 +170,32 @@
         margin-left: -4vw;
         word-break: keep-all;
       }
+
       .content__item:nth-child(even) .content__item__desc {
         margin-left: auto;
-        margin-right: -4vw;
+        margin-right: 4vw;
       }
-      #parallax__info {
-        position: fixed;
-        left: 20px;
-        bottom: 20px;
-        z-index: 2000;
-        background-color: rgba(0, 0, 0, 0.4);
-        color: #fff;
-        padding: 20px;
-        border-radius: 10px;
-      }
-      #parallax__info li,
-      .scroll {
-        line-height: 1.4;
-      }
+
       @media (max-width: 800px) {
         #parallax__cont {
           margin-top: 70vw;
         }
+
         #parallax__nav {
           padding: 10px;
           right: auto;
           left: 10px;
-          top: 50%;
-          transform: translateY(-50%);
+          top: 10px;
+          transform: translateY(50%);
           border-radius: 5px;
           background-color: rgba(0, 0, 0, 0.8);
         }
+
         #parallax__nav li {
           display: block;
           margin: 5px;
         }
+
         #parallax__nav li a {
           font-size: 14px;
           padding: 5px;
@@ -204,13 +203,70 @@
           height: auto;
           line-height: 1;
         }
+
         #parallax__nav li.active a {
           border-radius: 5px;
         }
-        #parallax__info {
-          left: 10px;
-          bottom: 10px;
+      }
+
+      /* 한번에 나타나기 */
+      /* #contents > section{
+            opacity: 0;
+            transition: all 1s;
         }
+        #contents > section.show{
+            opacity: 1;
+        } */
+
+      /* 개별적으로 나타나기 */
+      #contents > section .content__item__num {
+        opacity: 0;
+        transform: translateY(200px);
+        transition: all 1s 0.1s cubic-bezier(0.4, 0, 0.2, 1);
+      }
+      #contents > section .content__item__title {
+        opacity: 0;
+        transform: translateY(-100px);
+        transition: all 1s 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+      }
+      #contents > section .content__item__imgWrap {
+        opacity: 0;
+        transform: translateY(200px) rotate(30deg) skew(20deg);
+        transition: all 1s 0.6s cubic-bezier(0.4, 0, 0.2, 1);
+      }
+      #contents > section .content__item__desc {
+        opacity: 0;
+        transform: translateX(-200px);
+        transition: all 1s 0.9s cubic-bezier(0.4, 0, 0.2, 1);
+      }
+
+      #contents > section.show .content__item__num {
+        opacity: 0.07;
+        transform: translateY(0);
+      }
+      #contents > section.show .content__item__title {
+        opacity: 1;
+        transform: translateX(0);
+      }
+      #contents > section.show .content__item__imgWrap {
+        opacity: 1;
+        transform: translateY(0) rotate(0) skew(0);
+      }
+      #contents > section.show .content__item__desc {
+        opacity: 1;
+        transform: translateX(0);
+      }
+      #contents > section:nth-child(even) .content__item__title {
+        transform: translateX(100px);
+      }
+      #contents > section:nth-child(even).show .content__item__title {
+        transform: translateX(0);
+      }
+      #contents > section:nth-child(even) .content__item__desc {
+        transform: translateX(-200px);
+      }
+      #contents > section:nth-child(even)/show .content__item__desc {
+        transform: translateX(0);
       }
     </style>
   </head>
@@ -230,19 +286,7 @@
     </header>
     <!-- //header -->
 
-    <nav id="parallax__nav">
-      <ul>
-        <li class="active"><a href="#section1">메뉴1</a></li>
-        <li><a href="#section2">메뉴2</a></li>
-        <li><a href="#section3">메뉴3</a></li>
-        <li><a href="#section4">메뉴4</a></li>
-        <li><a href="#section5">메뉴5</a></li>
-        <li><a href="#section6">메뉴6</a></li>
-        <li><a href="#section7">메뉴7</a></li>
-        <li><a href="#section8">메뉴8</a></li>
-        <li><a href="#section9">메뉴9</a></li>
-      </ul>
-    </nav>
+    <nav id="parallax__nav"></nav>
 
     <main id="parallax__cont">
       <div id="contents">
@@ -1000,10 +1044,15 @@ document.querySelectorAll("#parallax__nav li a").forEach(li =&gt; {
           window.pageYOffset ||
           document.documentElement.scrollTop ||
           window.screenY;
+        //  + window.innerHeight;
+        //  window.innerHeight - 메서드가 아니라 속성이기때문에 괄호가 들어가지 않음
+
+        //출력
         document.querySelectorAll(".content__item").forEach((item) => {
           if (scrollTop > item.offsetTop - window.innerHeight / 2) {
             item.classList.add("show");
           }
+          //scrollTop > item.offsetTop ? item.class.add("show") : item.classList.remove("show");
         });
         requestAnimationFrame(scroll); //1분에 60번실행 메모리 적게 차지
       }
