--- a/javascript/effect/searchEffect01.html
+++ b/javascript/effect/searchEffect01.html
@@ -14,27 +14,26 @@
 </head>
 
 <body>
-    <header id="header">
-
-        <nav>
-            <ul>
-                <li class="active"><a href="searchEffect01.html">1</a>
-                </li>
-                <li><a href="searchEffect02.html">2</a></li>
-                <li><a href="searchEffect03.html">3</a></li>
-                <li><a href="searchEffect04.html">4</a></li>
-                <li><a href="searchEffect05.html">5</a></li>
-                <li><a href="searchEffect06.html">6</a></li>
-            </ul>
-        </nav>
-    </header>
+        <header id="header">
+            <nav>
+                <ul>
+                    <li  class="active">
+                        <a href="searchEffect01.html">1</a>
+                    </li>
+                    <li><a href="searchEffect02.html">2</a></li>
+                    <li><a href="searchEffect03.html">3</a></li>
+                    <li><a href="searchEffect04.html">4</a></li>
+                    <li><a href="searchEffect05.html">5</a></li>
+                    <li><a href="searchEffect06.html">6</a></li>
+                </ul>
+            </nav>
+        </header>
     <!-- //header -->
 
     <main id="main">
         <div class="search__wrap">
             <span>indexOf()를 이용하여 검색하기</span>
-            <h1>JAVASCRIPT<br>
-                메서드 검색하기</h1>
+            <h1>CSS 속성검색하기</h1>
             <div class="search__box">
                 <label for="search">검색하기</label>
                 <input type="text" id="search" placeholder="CSS 속성을 입력해주세요.">
