--- a/javascript/effect/mouseEffect01.html
+++ b/javascript/effect/mouseEffect01.html
@@ -77,8 +77,13 @@
 
       .mouse__cursor.style4 {
         background-color: rgba(141, 160, 243, 0.4);
-        border-color: rgb(141, 160, 243);
-        transform: scale(10);
+        background: linear-gradient(
+          200deg,
+          rgba(93, 218, 207, 0.4),
+          rgba(64, 62, 131, 0.5),
+          rgba(255, 124, 244, 0.5)
+        );
+        transform: scale(10) rotate(5turn);
       }
 
       .mouse__cursor.style5 {
@@ -90,7 +95,7 @@
       .mouse__cursor.style6 {
         background-color: rgba(95, 243, 139, 0.4);
         border-color: rgb(95, 243, 139);
-        transform: scale(5) rotateX(545deg);
+        transform: scale(5) rotateY(810deg);
         border-radius: 0;
       }
 
@@ -102,6 +107,7 @@
         line-height: 1.6;
         color: #fff;
       }
+
       @media (max-width: 800px) {
         .mouse__wrap p {
           padding: 0 20px;
@@ -154,19 +160,20 @@
             and all that is left is <span class="style6">a compromise..</span>
           </p>
         </div>
+
+        <div class="mouse__Info">
+          <ul>
+            <li>clientX : <span class="clientX">0</span>px</li>
+            <li>clientY : <span class="clientY">0</span>px</li>
+            <li>offsetX : <span class="offsetX">0</span>px</li>
+            <li>offsetY : <span class="offsetY">0</span>px</li>
+            <li>pageX : <span class="pageX">0</span>px</li>
+            <li>pageY : <span class="pageY">0</span>px</li>
+            <li>screenX : <span class="screenX">0</span>px</li>
+            <li>screenY : <span class="screenY">0</span>px</li>
+          </ul>
+        </div>
       </section>
-      <div class="mouse__Info">
-        <ul>
-          <li>clientX : <span class="clientX">0</span>px</li>
-          <li>clientY : <span class="clientY">0</span>px</li>
-          <li>offsetX : <span class="offsetX">0</span>px</li>
-          <li>offsetY : <span class="offsetY">0</span>px</li>
-          <li>pageX : <span class="pageX">0</span>px</li>
-          <li>pageY : <span class="pageY">0</span>px</li>
-          <li>screenX : <span class="screenX">0</span>px</li>
-          <li>screenY : <span class="screenY">0</span>px</li>
-        </ul>
-      </div>
     </main>
     <!-- //main -->
 
@@ -396,24 +403,27 @@
 
     <script src="../assets/js/highlight.min.js"></script>
     <script src="../assets/js/common.js"></script>
+    <script src="../assets/js/gsap.min.js"></script>
+    <script>
+      hljs.highlightAll();
+    </script>
 
     <script>
       //마우스 좌표 출력
       window.addEventListener("mousemove", (event) => {
-        document.querySelector("clientX").innerText = event.clientX; //골라서 넣어서 값이 나옴
-        document.querySelector("clientY").innerText = event.clientY;
-        document.querySelector("offsetX").innerText = event.offsetX;
-        document.querySelector("offsetY").innerText = event.offsetY;
-        document.querySelector("pageX").innerText = event.pageX;
-        document.querySelector("pageY").innerText = event.pageY;
-        document.querySelector("screenX").innerText = event.screenX;
-        document.querySelector("screenY").innerText = event.screenY;
+        document.querySelector(".clientX").innerText = event.clientX;
+        document.querySelector(".clientY").innerText = event.clientY;
+        document.querySelector(".offsetX").innerText = event.offsetX;
+        document.querySelector(".offsetY").innerText = event.offsetY;
+        document.querySelector(".pageX").innerText = event.pageX;
+        document.querySelector(".pageY").innerText = event.pageY;
+        document.querySelector(".screenX").innerText = event.screenX;
+        document.querySelector(".screenY").innerText = event.screenY;
       });
 
       //마우스 움직이기
-
+      const cursor = document.querySelector(".mouse__cursor");
       window.addEventListener("mousemove", (e) => {
-        const cursor = document.querySelector(".mouse__cursor");
         cursor.style.left = e.clientX - 25 + "px";
         cursor.style.top = e.clientY - 25 + "px";
       });
@@ -469,7 +479,7 @@
       //     });
       // }
 
-      const mouseStyle = document.querySelectorAll(".mouse__wrap.span");
+      // const mouseStyle = document.querySelectorAll(".mouse__wrap.span");
       // // forEach문
       // forEach((el) => {
       //   document
