--- a/javascript/effect/mouseEffect03.html
+++ b/javascript/effect/mouseEffect03.html
@@ -20,15 +20,15 @@
         align-items: center;
         justify-content: center;
         flex-direction: column;
-        color: #fff;
+        color: rgb(152, 3, 251);
         overflow: hidden;
-        /* cursor: none; */
+        cursor: none;
       }
 
       .mouse__wrap p {
         font-size: 2vw;
         line-height: 2;
-        font-weight: 300;
+        font-weight: 500;
         text-align: center;
       }
 
@@ -38,8 +38,8 @@
       }
 
       .mouse__wrap p span {
-        border-bottom: 0.15vw dashed #fff;
-        color: rgb(3, 247, 174);
+        border-bottom: 0.15vw dashed rgb(152, 3, 251);
+        color: rgb(5, 165, 117);
       }
 
       .mouse__cursor {
@@ -48,51 +48,20 @@
         top: 0;
         width: 200px;
         height: 200px;
-        border-radius: 50%;
         z-index: -1;
-        background-image: url(../img/effect_bg14-min.jpg);
+        border-radius: 50%;
+        background-image: url(../assets/img/effect_bg14-min.jpg);
         background-size: cover;
         background-position: center center;
         background-attachment: fixed;
+        /* background-attachment : fixed 하면 배경을 뷰포트에 고정
+        이 속성을 이용하여 이미지의 일부분만 보여주어 
+        마치 밝아지는 것처럼 보임 */
         border: 5px solid #fff;
-      }
-
-      .mouse__cursor.style1 {
-        background-color: rgba(6, 250, 217, 0.4);
-        border-color: rgb(6, 250, 217);
-        transform: scale(10) rotateY(720deg);
-      }
-
-      .mouse__cursor.style2 {
-        background-color: rgba(140, 0, 255, 0.4);
-        border-color: rgb(140, 0, 255);
-        transform: scale(3.5) rotateX(545deg);
-      }
-
-      .mouse__cursor.style3 {
-        background-color: rgba(0, 47, 255, 0.4);
-        border-color: rgb(0, 47, 255);
-        transform: scale(0.1);
-      }
-
-      .mouse__cursor.style4 {
-        background-color: rgba(141, 160, 243, 0.4);
-        border-color: rgb(141, 160, 243);
-        transform: scale(10);
-      }
-
-      .mouse__cursor.style5 {
-        background-color: rgba(241, 164, 190, 0.4);
-        border-color: rgb(241, 164, 190);
-        transform: scale(5) skew(40deg);
-      }
-
-      .mouse__cursor.style6 {
-        background-color: rgba(95, 243, 139, 0.4);
-        border-color: rgb(95, 243, 139);
-        transform: scale(5);
-        border-radius: 0;
-      }
+    }
+      body::after {
+        background: rgba(0, 0, 0, 0.85);
+    }
       @media (max-width: 800px) {
         .mouse__wrap p {
           padding: 0 20px;
@@ -377,7 +346,7 @@
     <script src="../assets/js/common.js"></script>
     <script src="../assets/js/gsap.min.js"></script>
 
-    <script>
+    <script> 
     //   //마우스 좌표 출력
     //   window.addEventListener("mousemove", (event) => {
     //     document.querySelector("clientX").innerText = event.clientX; //골라서 넣어서 값이 나옴
@@ -410,14 +379,44 @@
     const span = document.querySelector(".mouse__wrap span");
 
     window.addEventListener("mousemove", e =>{
+        // addEventListener()의 mousemove 속성을 이용, e는 마우스 커서
    //gsap
         gsap.to(cursor, {
-            duration: 0.5, 
+            duration: 0.5, //
             left: e.pageX-circle.width/2,    
             top: e.pageY-circle.height/2, 
    
         });
     });
+
+    // const circleW = cursor.offsetWidth; //200
+    // const circle2 = cursor.clientWidth; //190
+    // offset*과 client*의 값은 비슷한 값을 불러오지만, 
+    // client는 보더값을 제외하고 불러온다는 차이
+
+    // getBoundingClientRect()는 요소의 모든 정보값을 객체로 불러옴
+        //     : gsap.to( 요소, {애니메이션 값} );
+        // - duration : 애니메이션 지속시간
+        // - left : 왼쪽 좌표 값(이동 위치)
+        // - top : 위쪽 좌표 값(이동 위치)
+
+
+
+
+
+
+
+
+
+        
+    document.querySelectorAll(".")
+
+
+        document.addEventListener("mousemove", (e)=>{
+          document.querySelector(".pageX").textContent = e.pageX;
+          document.querySelector('.pageY').textContent = e.pageY;
+        });
+
 
 
     </script>
