--- a/javascript/effect/mouseEffect04.html
+++ b/javascript/effect/mouseEffect04.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>마우스 이펙트04</title>
     <link rel="stylesheet" href="../assets/css/mouse.css" />
-    <link rel="stylesheet" href="../assets/css/dracula.css" />
+    <link rel="stylesheet" href="../assets/css/androidstudio.css" />
+
     <link
       href="https://webfontworld.github.io/NexonLv1Gothic/NexonLv1Gothic.css"
       rel="stylesheet"
@@ -22,33 +23,41 @@
         flex-direction: column;
         color: #fff;
         overflow: hidden;
-        /* cursor: none; */
       }
-      .mouse__wrap figure{
+
+      .mouse__wrap figure {
         width: 50vw;
-        background:#ccc;
+        height: 50vh;
         position: relative;
         overflow: hidden;
-        transition: transform 500em, ease;
+        transition: transform 500ms ease;
         cursor: none;
       }
-      .mouse__wrap figure:hover{
+      .mouse__wrap figure:hover {
         transform: scale(1.025);
       }
-      .mouse__wrap figure img{
+      .mouse__wrap figure img {
         position: absolute;
         left: -5%;
         top: -5%;
         width: 110%;
         height: 110%;
+        object-fit: cover;
+        /* object-fit: : background-size의 cover와 같은 속성으로 
+         bg가 아닌 img에 cover를 적용할 수 있는 속성 */
       }
-      .mouse__wrap figure figcaption{
+      .mouse__wrap figure figcaption {
         position: absolute;
-        left: 50%;top: 50px;
-        transform: translate(-50%, -50% );
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
         text-align: center;
+        font-size: 16px;
+        white-space: nowrap;
+        line-height: 1.4;
+        font-weight: 700;
       }
-      .mouse__cusor{
+      .mouse__cursor {
         position: absolute;
         left: 0;
         top: 0;
@@ -56,21 +65,29 @@
         height: 20px;
         background: #fff;
         border-radius: 50%;
-
+        z-index: 1000;
+        user-select: none;
+        pointer-events: none;
       }
-
- 
+      .mouse__info {
+        position: absolute;
+        left: 20px;
+        bottom: 10px;
+        font-size: 14px;
+        line-height: 1.6;
+        color: #fff;
+      }
     </style>
   </head>
-  <body class="img10">
+  <body class="img28">
     <header id="header">
       <h1>Javascript Mouse Effect04</h1>
-      <p>마우스 이펙트 - 이미지효과 </p>
+      <p>마우스 이펙트 - 이미지효과</p>
       <ul>
         <li><a href="mouseEffect01.html">1</a></li>
         <li><a href="mouseEffect02.html">2</a></li>
         <li><a href="mouseEffect03.html">3</a></li>
-        <li   class="active"><a href="mouseEffect04.html">4</a></li>
+        <li class="active"><a href="mouseEffect04.html">4</a></li>
         <li><a href="mouseEffect05.html">5</a></li>
         <li><a href="mouseEffect06.html">6</a></li>
         <li><a href="mouseEffect07.html">7</a></li>
@@ -80,30 +97,30 @@
     <main id="main">
       <section id=" mouseType">
         <div class="mouse__cursor"></div>
-        <div  class="mouse__wrap">
-        <figure>
-            <img src="../assets/img/effect_bg19.jpg" alt="이미지">
-        </figure>
-         <figcaption>_</figcaption>
-
-    </div>
-          <p>
-            <span class="style1">가능</span>해 보이는 것
-             혹은 
-             <span class="style4">타당</span>해 보이는 것만<br />
-            선택한다면 스스로가
-            <span class="style2"> 진정 원하는 것</span>을<br />
-           알 수 없고  <span class="style3">타협</span>만 남는다..
-          </p>
-          <p>
-           If you limit  <span class="style6"> your choices</span
-            > only to what seems <span class="style4">possible or reasonable</span>,
-            <br />you disconnect your self from<span class="style5"> what you truly want</span>,<br />
-            and all that is left is  <span class="style6">a compromise..</span>
-          </p>
+        <div class="mouse__wrap">
+          <figure>
+            <img src="../assets/img/effect_bg38.jpg" alt="이미지" />
+            <figcaption>
+              <p>
+                <span class="style1">가능</span>해 보이는 것 혹은
+                <span class="style4">타당</span>해 보이는 것만<br />
+                선택한다면 스스로가
+                <span class="style2"> 진정 원하는 것</span>을<br />
+                알 수 없고 <span class="style3">타협</span>만 남는다..
+              </p>
+            </figcaption>
+          </figure>
         </div>
       </section>
-     
+      <div class="mouse__info">
+        <ul>
+          <li>mousePageX : <span class="mousePageX">0</span> px</li>
+          <li>mousePageY : <span class="mousePageY">0</span> px</li>
+          <li>centerPageX : <span class="centerPageX">0</span> px</li>
+          <li>centerPageY : <span class="centerPageY">0</span> px</li>
+        </ul>
+      </div>
+    </main>
     <!-- //main -->
 
     <footer id="footer">
@@ -335,43 +352,67 @@
     <script src="../assets/js/gsap.min.js"></script>
 
     <script>
-    const circle = document.querySelector(".mouse__cursor")
-    const cursorRect = cursor.getBoundingClientRect();
-    document.querySelector(".mouse__wrap figure").addEventListener("mousemove", (e)=>{
-    //커서
-        gsap.to(cursor, {
-            duration: .5, 
-            left:e.pageX -cursorRect.width/2,
-            top:e.pageY -cursorRect.height/2,
+      const cursor = document.querySelector(".mouse__cursor");
+      const cursorRect = cursor.getBoundingClientRect();
+
+      document
+        .querySelector(".mouse__wrap figure")
+        .addEventListener("mousemove", (e) => {
+          //커서
+          gsap.to(cursor, {
+            duration: 0.5,
+            left: e.pageX - cursorRect.width / 2,
+            top: e.pageY - cursorRect.height / 2,
+          });
+          //마우스좌표값
+          let mousePageX = e.pageX;
+          let mousePageY = e.pageY;
+          //전체가로
+          // window.innerWidth//1920 브라우저크기
+          // window.outerWidth//1920 브라우저 크기 스크롤바포함
+          // window.screenWidth//1920 화면크기
+
+          //마우스좌표값 가운데로
+          //전체길이/2-마우스 좌표값 ==0
+          // : window.innerWidth/2은 전체 너비의 반이므로, 그 값은 페이지 가로의 중앙을 나타냅니다.
+          // window.innerHeight/2은 전체 높이의 반이므로, 그 값은 페이지 세로의 중앙을 나타냅니다.
+          // 만약 페이지가 전체화면인 상태로 정 중앙에 마우스 커서를 놓았다고 하면,
+          // window.innerWidth/2 - mousePageX의 값과 window.innerHeight/2 - mousePageY의 값은 0이 됩니다.
+          // 즉, 중앙을 기준으로 커서의 위치가 바뀌며 mousePageX와 mousePageY의 값이 달라짐에 따라
+          // centerPageX와 centerPageY의 값이 달라지게 됩니다.
+          // 마우스 커서가 중앙보다 왼쪽, 위쪽에 위치하게 되면 centerPageX와 centerPageY의 값은 양수가 되고,
+          // 그 반대의 경우에는 centerPageX와 centerPageY의 값이 음수가 됩니다.
+
+          let centerPageX = window.innerWidth / 2 - mousePageX;
+          let centerPageY = window.innerHeight / 2 - mousePageY;
+
+          //이미지 움직이기
+          const imgMove = document.querySelector(".mouse__wrap figure img");
+          // imgMove.style.transform =
+          //   "translate(" +
+          //   centerPageX / 20 +
+          //   " px, " +
+          //   centerPageY / 20 +
+          //   " px)";
+
+          gsap.to(imgMove, {
+            duration: 0.3,
+            X: centerPageX / 20,
+            y: centerPageY / 20,
+          });
+          // : gsap.to( 요소, {애니메이션 값} );
+          // - duration : 애니메이션 지속시간
+          // - left : 왼쪽 좌표 값(이동 위치)
+          // - top : 위쪽 좌표 값(이동 위치) - centerPageX/20
+          // : 각 PageX, PageY 값을 20으로 나눈 값만큼
+          //  x, y축으로 움직이도록 하여 천천히 조금식 움직이는 것처럼 보이게
+
+          //출력
+          document.querySelector(".mousePageX").textContent = mousePageX;
+          document.querySelector(".mousePageY").textContent = mousePageY;
+          document.querySelector(".centerPageX").textContent = centerPageX;
+          document.querySelector(".centerPageY").textContent = centerPageY;
         });
-        let mousePageX = e.pageX;
-        let mousePageY = e.pageY;
-    //전체가로
-        // window.innerWidth//1920 브라우저크기
-        // window.outerWidth//1920 브라우저 크기 스크롤바포함
-        // window.screenWidth//1920 화면크기
-
-        //마우스좌표값 가운데로 
-        //전체길이/2-마우스 좌표값 ==0
-
-        let centerPageX = e.innerWidth/2-mousePageX;
-        let centerPageY = e.innerHeight/2-mousePageY;
-
-        const imgMove = document.querySelector(".mouse__wrap figure img");
-        imgMove.style.transform = "translate("+ centerPageX/20 +"px, "+ centerPageY/20 +"px)";
-
-        gsap.to(imgMove, {
-            duration: .3, 
-            X:centerPageX/20, 
-            y:centerPageY/20
-        })
-
-        document.querySelector(".mousePageX").textContent = mousePageX;
-        document.querySelector(".mousePageY").textContent = mousePageY;
-        document.querySelector(".centerPageX").textContent = centerPageX;
-        document.querySelector(".centerPageY").textContent = centerPageY;
-
-    });
     </script>
   </body>
 </html>
