--- a/javascript/effect/mouseEffect05.html
+++ b/javascript/effect/mouseEffect05.html
@@ -12,90 +12,81 @@
       rel="stylesheet"
     />
     <style>
-/* mouseType */
-.mouse__wrap{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    color: #fff;
-    width: 100%;
-    height: 100vh;
-    overflow: hidden;
-}
-.mouse__img{
-    transform: perspective(600px) rotateX(0deg) rotateY(0deg);
-    transform-style: preserve-3d;
-    will-change: transform;
-    transition: all 0.3s;
-}
-.mouse__img figure{
-    width: 50vw;
-    position: relative;
-}
-.mouse__img figure::before {
-    content: '';
-    position: absolute;
-    left: 5%;
-    bottom: -30px;
-    width: 90%;
-    height: 100px;
-    background: url(../../../assets/slider/effect_bg_07.jpg) center no-repeat;
-    background-size: 100% 40px;
-    filter: blur(15px) grayscale(50%);
-    z-index: -1;
-    opacity: 0.7;
-    }
-.mouse__img figcaption{
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    font-size: 1vw;
-    line-height: 1.6;
-    transform: translate3d(-50%, -50%, 100px);
-    padding: 10px;
-    white-space: nowrap;
-    text-align: center;
-    background: rgba(0, 0, 0, .4);
-    
-}
-.mouse__cursor{
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    background: #fff;
-    z-index: 1000;
-    pointer-events: none;
-    user-select: none;
-    mix-blend-mode: difference;
-}
-.mouse__info {
-/* position: absolute;
-left: 20px;
-bottom: 10px;
-font-size: 14px;
-line-height: 1.6;
-color: #fff; */
-position: fixed;
-left: 20px;
-bottom: 20px;
-z-index: 2000;
-background-color: rgba(0, 0, 0, 0.4);
-color: #fff;
-padding: 20px;
-border-radius: 10px;
-
-
-}
+      /* mouseType */
+      .mouse__wrap {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        color: #fff;
+        width: 100%;
+        height: 100vh;
+        overflow: hidden;
+        cursor: none;
+      }
+      .mouse__img {
+        transform: perspective(600px) rotateX(0deg) rotateY(0deg);
+        transform-style: preserve-3d;
+        will-change: transform;
+        transition: all 0.3s;
+      }
+      .mouse__img figure {
+        width: 50vw;
+        position: relative;
+      }
+      .mouse__img figure::before {
+        content: "";
+        position: absolute;
+        left: 5%;
+        bottom: -30px;
+        width: 90%;
+        height: 40px;
+        background: url(../../../assets/slider/effect_bg_07.jpg) center
+          no-repeat;
+        background-size: 100% 40px;
+        filter: blur(15px) grayscale(50%);
+        z-index: -1;
+        opacity: 0.7;
+      }
+      .mouse__img figcaption {
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        font-size: 1vw;
+        line-height: 1.6;
+        transform: translate3d(-50%, -50%, 100px);
+        padding: 1vw;
+        white-space: nowrap;
+        text-align: center;
+        background: rgba(0, 0, 0, 0.4);
+      }
+      .mouse__cursor {
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
+        background: #fff;
+        z-index: 1000;
+        pointer-events: none;
+        user-select: none;
+        mix-blend-mode: difference;
+      }
+      .mouse__info {
+        position: absolute;
+        left: 20px;
+        bottom: 10px;
+        font-size: 14px;
+        line-height: 1.6;
+        color: #fff;
+      }
     </style>
   </head>
   <body class="img12">
     <header id="header">
       <h1>Javascript Mouse Effect05</h1>
-      <p>마우스 이펙트 - 기울기효과 </p>
+      <p>마우스 이펙트 - 기울기효과</p>
       <ul>
         <li><a href="mouseEffect01.html">1</a></li>
         <li><a href="mouseEffect02.html">2</a></li>
@@ -110,36 +101,37 @@ border-radius: 10px;
     <main id="main">
       <section id="mouseType">
         <div class="mouse__cursor"></div>
-        <div  class="mouse__wrap">
-            <div class="mouse__img">
-                <figure>
-                    <img src="../assets/img/effect_bg21.jpg" alt="이미지">
-                </figure>
-                 <figcaption><p>
-                    <span class="style1">가능</span>해 보이는 것
-                     혹은 
-                     <span class="style4">타당</span>해 보이는 것만<br />
-                    선택한다면 스스로가
-                    <span class="style2"> 진정 원하는 것</span>을<br />
-                   알 수 없고  <span class="style3">타협</span>만 남는다..
-                  </p>
-             </figcaption>
-            </div>
-            <div class="mouse__Info">
-                <ul>
-                  <li>mousePageX : <span class="mousePageX">0</span>px</li>
-                  <li>mousePageY : <span class="mousePageY">0</span>px</li>
-                  <li>centerPageX : <span class="centerPageX">0</span>px</li>
-                  <li>centerPageY : <span class="centerPageY">0</span>px</li>
-                  <li>maxPageX : <span class="maxPageX">0</span>px</li>
-                  <li>maxPageY : <span class="maxPageY">0</span>px</li>
-                  <li>anglePageX : <span class="anglePageX">0</span>px</li>
-                  <li>anglePageY : <span class="anglePageY">0</span>px</li>
-                </ul>
-              </div> 
+        <div class="mouse__wrap">
+          <div class="mouse__img">
+            <figure>
+              <img src="../assets/img/effect_bg21.jpg" alt="이미지" />
+            </figure>
+            <figcaption>
+              <p>
+                <span class="style1">가능</span>해 보이는 것 혹은
+                <span class="style4">타당</span>해 보이는 것만<br />
+                선택한다면 스스로가
+                <span class="style2"> 진정 원하는 것</span>을<br />
+                알 수 없고 <span class="style3">타협</span>만 남는다..
+              </p>
+            </figcaption>
+          </div>
+        </div>
       </section>
-  
-     
+      <div class="mouse__Info">
+        <ul>
+          <li>mousePageX : <span class="mousePageX">0</span>px</li>
+          <li>mousePageY : <span class="mousePageY">0</span>px</li>
+          <li>centerPageX : <span class="centerPageX">0</span>px</li>
+          <li>centerPageY : <span class="centerPageY">0</span>px</li>
+          <li>maxPageX : <span class="maxPageX">0</span>px</li>
+          <li>maxPageY : <span class="maxPageY">0</span>px</li>
+          <li>anglePageX : <span class="anglePageX">0</span>px</li>
+          <li>anglePageY : <span class="anglePageY">0</span>px</li>
+        </ul>
+      </div>
+    </main>
+
     <!-- //main -->
 
     <footer id="footer">
@@ -371,37 +363,61 @@ border-radius: 10px;
     <script src="../assets/js/gsap.min.js"></script>
 
     <script>
-        const mouseMove = (e) => {
-            let mousePageX = e.pageX;
-            let mousePageY = e.pageY;
+      const mouseMove = (e) => {
+        //마우스 좌표값
+        let mousePageX = e.pageX;
+        let mousePageY = e.pageY;
 
-            let centerPageX = window.innerWidth / 2 - mousepageX;
-            let centerPageY = window.innerHeight / 2 - mousepageY;
+        //마우스 좌표 기준점을 가운데로 변경
+        let centerPageX = window.innerWidth / 2 - mousepageX;
+        let centerPageY = window.innerHeight / 2 - mousepageY;
 
-            let maxPageX = Math.max(-200, Math.min(200, centerPageX));
-            let maxPageY = Math.max(-200, Math.min(200, centerPageY));
+        //최소값은 -100 최대값은 100 설정
+        let maxPageX = Math.max(-200, Math.min(200, centerPageX));
+        let maxPageY = Math.max(-200, Math.min(200, centerPageY));
 
-            let anglePageX = maxPageX * 0.1;
-            let anglePageY = maxPageY * 0.1;
+        //각도 줄이는 설정
+        let anglePageX = maxPageX * 0.1;
+        let anglePageY = maxPageY * 0.1;
 
-            let softPageX = 0, softPageY = 0;
-            softPageX += (anglePageX - anglePageX) * 0.4;
-            softPageY += (anglePageY - anglePageY) * 0.4;
+        //부드럽게 설정
+        let softPageX = 0;
+        let softPageY = 0;
+        softPageX += (anglePageX - softPageX) * 0.4;
+        softPageY += (anglePageY - softPageY) * 0.4;
 
-            const imgMove = document.querySelector(".mouse__img")
-            imgMove.style .transform = "perspective(600px) rotateX("+ anglePageY +"deg) rotateY(" + anglePageX +"deg)";
+        //이미지움직이기
+        const imgMove = document.querySelector(".mouse__img");
+        imgMove.style.transform =
+          "perspective(600px) rotateX(" +
+          anglePageY +
+          "deg) rotateY(" +
+          anglePageX +
+          "deg)";
 
-            gsap.to(".mouse__cursor", { duration: 0.3, left: mousePageX - 50, top: mousePageY - 50 })
+        //커서
+        gsap.to(".mouse__cursor", {
+          duration: 0.3,
+          left: mousePageX - 50,
+          top: mousePageY - 50,
+        });
 
-            document.querySelector(".mousePageX").textContent = mousePageX;
-            document.querySelector(".mousePageY").textContent = mousePageY;   
-            document.querySelector(".centerPageX").textContent = centerPageX;
-            document.querySelector(".centerPageY").textContent = centerPageY;
-            document.querySelector(".maxPageX").textContent = maxPageX;
-            document.querySelector(".maxPageY").textContent = maxPageY;
-            document.querySelector(".anglePageX").textContent = Math.round(anglePageX);
-            document.querySelector(".anglePageY").textContent = Math.round(anglePageY);
-        }
+        // 마우스 좌표값 출력
+        document.querySelector(".mousePageX").textContent =
+          Math.round(mousePageX);
+        document.querySelector(".mousePageY").textContent =
+          Math.round(mousePageY);
+        document.querySelector(".centerPageX").textContent =
+          Math.round(centerPageX);
+        document.querySelector(".centerPageY").textContent =
+          Math.round(centerPageY);
+        document.querySelector(".maxPageX").textContent = Math.round(maxPageX);
+        document.querySelector(".maxPageY").textContent = Math.round(maxPageY);
+        document.querySelector(".anglePageX").textContent =
+          Math.round(anglePageX);
+        document.querySelector(".anglePageY").textContent =
+          Math.round(anglePageY);
+      };
     </script>
   </body>
 </html>
