--- a/javascript/effect/parallaxEffect06.html
+++ b/javascript/effect/parallaxEffect06.html
@@ -321,6 +321,128 @@
                 opacity: 1;
                 transform: translateY(0);
             }
+            /* 순차적 나타내기 */
+            .style1 .split span {
+                opacity: 0;
+                min-width: 1vw;
+                transition: all 0.3s ease-in-out;
+            }
+            .style1 .split span.show {
+                opacity: 1;
+            }
+            .style2 .split span {
+                opacity: 0;
+                min-width: 1vw;
+                transform: translateY(50px);
+                display: inline-block;
+                transition: all 0.3s cubic-bezier(0, 0.28, 0, 0);
+            }
+            .style2 .split span.show {
+            }
+
+            .style4 .split span {
+                opacity: 0;
+                min-width: 1vw;
+                display: inline-block;
+            }
+            .style4 .split span.show {
+                opacity: 1;
+                animation: wobble 0.5s 1 ease-in forwards;
+            }
+
+            @keyframes wobble {
+                0% {
+                    -webkit-transform: translate3d(0, 0, 0);
+                    transform: translate3d(0, 0, 0);
+                    opacity: 0;
+                }
+                15% {
+                    -webkit-transform: translate3d(-25%, 0, 0)
+                        rotate3d(0, 0, 1, -5deg);
+                    transform: translate3d(-25%, 0, 0) rotate3d(0, 0, 1, -5deg);
+                }
+                30% {
+                    -webkit-transform: translate3d(20%, 0, 0)
+                        rotate3d(0, 0, 1, 3deg);
+                    transform: translate3d(20%, 0, 0) rotate3d(0, 0, 1, 3deg);
+                }
+                45% {
+                    -webkit-transform: translate3d(-15%, 0, 0)
+                        rotate3d(0, 0, 1, -3deg);
+                    transform: translate3d(-15%, 0, 0) rotate3d(0, 0, 1, -3deg);
+                }
+                60% {
+                    -webkit-transform: translate3d(10%, 0, 0)
+                        rotate3d(0, 0, 1, 2deg);
+                    transform: translate3d(10%, 0, 0) rotate3d(0, 0, 1, 2deg);
+                }
+                75% {
+                    -webkit-transform: translate3d(-5%, 0, 0)
+                        rotate3d(0, 0, 1, -1deg);
+                    transform: translate3d(-5%, 0, 0) rotate3d(0, 0, 1, -1deg);
+                }
+                100% {
+                    -webkit-transform: translate3d(0, 0, 0);
+                    transform: translate3d(0, 0, 0);
+                }
+            }
+            .style5 .split span {
+                opacity: 0;
+                min-width: 1vw;
+                display: inline-block;
+            }
+            .style5 .split span.show {
+                opacity: 1;
+                animation: bounceInLeft 0.5s 1 ease-in forwards;
+            }
+
+            @-webkit-keyframes bounceInLeft {
+                from,
+                60%,
+                75%,
+                90%,
+                to {
+                    -webkit-animation-timing-function: cubic-bezier(
+                        0.215,
+                        0.61,
+                        0.355,
+                        1
+                    );
+                    animation-timing-function: cubic-bezier(
+                        0.215,
+                        0.61,
+                        0.355,
+                        1
+                    );
+                }
+
+                0% {
+                    opacity: 0;
+                    -webkit-transform: translate3d(-3000px, 0, 0) scaleX(3);
+                    transform: translate3d(-3000px, 0, 0) scaleX(3);
+                }
+
+                60% {
+                    opacity: 1;
+                    -webkit-transform: translate3d(25px, 0, 0) scaleX(1);
+                    transform: translate3d(25px, 0, 0) scaleX(1);
+                }
+
+                75% {
+                    -webkit-transform: translate3d(-10px, 0, 0) scaleX(0.98);
+                    transform: translate3d(-10px, 0, 0) scaleX(0.98);
+                }
+
+                90% {
+                    -webkit-transform: translate3d(5px, 0, 0) scaleX(0.995);
+                    transform: translate3d(5px, 0, 0) scaleX(0.995);
+                }
+
+                to {
+                    -webkit-transform: translate3d(0, 0, 0);
+                    transform: translate3d(0, 0, 0);
+                }
+            }
         </style>
     </head>
     <body>
@@ -361,7 +483,7 @@
                     <figure class="content__item__imgWrap">
                         <div class="content__item__img"></div>
                     </figure>
-                    <p class="content__item__desc split">
+                    <p class="content__item__desc split style1">
                         신은 용기있는자를 결코 버리지 않는다.
                     </p>
                 </section>
@@ -397,7 +519,7 @@
                     <figure class="content__item__imgWrap">
                         <div class="content__item__img"></div>
                     </figure>
-                    <p class="content__item__desc split">
+                    <p class="content__item__desc split style4">
                         아무것도 하지않으면 아무 일도 일어나지 않는다.
                     </p>
                 </section>
@@ -409,7 +531,7 @@
                     <figure class="content__item__imgWrap">
                         <div class="content__item__img"></div>
                     </figure>
-                    <p class="content__item__desc split">
+                    <p class="content__item__desc split style5">
                         인생에 뜻을 세우는데 있어 늦은 때라곤 없다.
                     </p>
                 </section>
@@ -751,8 +873,10 @@
                     if (scrollTop >= item.offsetTop) {
                         item.querySelectorAll(".split span").forEach(
                             (span, index) => {
+                                setTimeout();
                                 span.classList.add("show");
-                            }
+                            },
+                            index
                         );
                     }
                 });
