--- a/webd/index3.html
+++ b/webd/index3.html
@@ -69,6 +69,27 @@
                 text-decoration: none;
                 color: #000;
              }
+             #header .nav li ul.submenu {
+              position: absolute;
+              background-color: #fff;
+              display: none;
+            }
+            #header .nav li ul.submenu li {
+              width: 100%;
+              background-color: #fff;
+            }
+            #header .nav li ul.submenu li a {
+              background-color: #fff;
+            }
+            #header .nav li ul.submenu li a:hover {
+              background-color: rgba(0, 0, 0, 0.1);
+            }
+
+
+
+
+
+
             #slider {
                 width: 1300px;
                 height: 550px;
@@ -99,18 +120,19 @@
                 height: 550px;
                 position: relative;
             }
-            .slideList .slideImg .desc {
+            .sliderList .slideImg .desc {
                 z-index: 1000;
-                position: relative;
-                left: 0;
-                top: px;
+                position: absolute;
+                left: 100px;
+                tOP: 300px;
                 background-color: #000;
                 border: 2px solid #000;
                 width: 400px;
-                height: 300px;
                 padding: 20px;
-                padding-right: 90px;
-                padding-bottom: 300px;
+                padding-bottom: 30px;
+                padding-right: 20px;
+               
+               
             }
             #slider .desc p{
                 color: #fff;
@@ -524,12 +546,40 @@
                 <div class="logo">
                     <img src="1111/img/img1/logo03.jpg" alt="" />
                 </div>
-                <div class="menu">
+                <div class="menu" class="clearfix">
                     <ul>
-                        <li><a href="#">무역통상정보</a></li>
-                        <li><a href="#">회원/업무지원</a></li>
-                        <li><a href="#">무역통계</a></li>
-                        <li><a href="#">협회안내</a></li>
+                        <li><a href="#">무역통상정보</a>
+                            <ul class="submenu">
+                                <li><a href="#">submenu-1</a></li>
+                                <li><a href="#">submenu-2</a></li>
+                                <li><a href="#">submenu-3</a></li>
+                                <li><a href="#">submenu-4</a></li>
+                              </ul>
+                        </li>
+                        <li><a href="#">회원/업무지원</a>
+                            <ul class="submenu">
+                                <li><a href="#">submenu-1</a></li>
+                                <li><a href="#">submenu-2</a></li>
+                                <li><a href="#">submenu-3</a></li>
+                                <li><a href="#">submenu-4</a></li>
+                              </ul>
+                        </li>
+                        <li><a href="#">무역통계</a>
+                            <ul class="submenu">
+                                <li><a href="#">submenu-1</a></li>
+                                <li><a href="#">submenu-2</a></li>
+                                <li><a href="#">submenu-3</a></li>
+                                <li><a href="#">submenu-4</a></li>
+                              </ul>
+                        </li>
+                        <li><a href="#">협회안내</a>
+                            <ul class="submenu">
+                                <li><a href="#">submenu-1</a></li>
+                                <li><a href="#">submenu-2</a></li>
+                                <li><a href="#">submenu-3</a></li>
+                                <li><a href="#">submenu-4</a></li>
+                              </ul>
+                        </li>
                     </ul>
                 </div>
             </header>
